tests/wsf/pass/copy.wsa
copy 5
copy 97
copy 7
copy 255
exit
