tests/wsf/fail/push_positive.wsa
+5 +97 +7 +255
exit
